# PSO-marzo-santarsiero-guerrini

./: .gitignore  2  CMakeLists.txt  Doxyfile  README.md  error_iterations.csv  main  notes.md
docs/: _particle_8cpp_source.html  _particle_8hpp_source.html  _particle_swarm_optimization_8cpp_source.html  _particle_swarm_optimization_8hpp_source.html  _test_functions_8cpp_source.html  _test_functions_8hpp_source.html  annotated.html  class_particle-members.html  class_particle.html  class_particle.js  class_particle_swarm_optimization-members.html  class_particle_swarm_optimization.html  class_particle_swarm_optimization.js  classes.html  dir_1a8fbe3b70e24437140b39d6e1d95383.html  dir_1a8fbe3b70e24437140b39d6e1d95383_dep.dot  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6c75c3e79a19e0260d36da30d943d094.html  dir_6c75c3e79a19e0260d36da30d943d094_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e44af4cfa7927492212b3e5008bef4ee.html  dir_e44af4cfa7927492212b3e5008bef4ee_dep.dot  dir_ecb8e12a751df2fced5e9329ec4c59e7.html  dir_ecb8e12a751df2fced5e9329ec4c59e7_dep.dot  dir_ff56dcb6235ef742535e80ba2af0f1af.html  dir_ff56dcb6235ef742535e80ba2af0f1af_dep.dot  doxygen.css  files.html  functions.html  functions_func.html  graph_legend.html  index.html  index.js  md__r_e_a_d_m_e.html  (+3 more)
include/: Particle.hpp  ParticleSwarmOptimization.hpp  TestFunctions.hpp
output/: error_iterations.csv  time_numparticles.csv
scripts/: csv_plotter.py
src/: 2  Particle.cpp  ParticleSwarmOptimization.cpp  TestFunctions.cpp  a.out  error_iterations.csv  ex  main  main.cpp  pso  (+3 more)
(+40 files in other folders)
